alignment fixes in aboutme

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -6,7 +6,7 @@
     width: 10vw;
     /* max-width: 92px; */
     box-shadow:
-      
+
         0.650em 0.650em #F08B00,
         0.600em 0.600em #F08B00,
         0.550em 0.550em #F08B00,
@@ -20,25 +20,43 @@
         0.150em 0.150em #F08B00,
         0.1em 0.100em #F08B00;
 }
-.portrait {
 
-    height: 138px;
-    width: 50vw;
+.portrait {
+    /* Makes the text within the element align horizontally */
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    /* height: 138px;
+    width: 50vw; */
 }
+
 .portrait h1 {
     text-align: left !important;
     margin: 10px;
+    /* padding: 20px; */
+    /* float: left; */
     /* float: left; */
 
 }
-.portrait h2{
+
+.portrait h2 {
     margin: 10px;
     /* float: left; */
-color: #F08B00;
-font-size: 12pt;
+    color: #F08B00;
+    font-size: 12pt;
 
 }
+
 .verticalText {
-    display: block; 
-    float: left;
+    /* Makes the text within the element align vertically */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+p {
+    width: 40vw;
 }
